packages/webassemblyjs/test/fixtures/type-errors/wrong-block-result/module.wast
(module 
  (func (result i32)
    (block
      (f32.const 0)
    )
    (i32.eqz)
    (i32.const 0)
  )
)
